# OpenGL-stuff

./: README.md
OpenGL stuff github/: CMakeLists.txt  glad.c  main.cpp
OpenGL stuff github/headers/: EBO.hpp  VAO.hpp  VBO.hpp  shaderClass.hpp
OpenGL stuff github/include/glad/: glad.h
OpenGL stuff github/shaders/: default.frag  default.vert
OpenGL stuff github/source files/: EBO.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
